[gd_scene load_steps=5 format=3 uid="uid://bfgi0len57yxm"]

[ext_resource type="Script" path="res://LightController.gd" id="1_4tnuc"]
[ext_resource type="PackedScene" uid="uid://djrxtiau067vb" path="res://bulbs/bulb_wiz.tscn" id="2_tu1jj"]
[ext_resource type="PackedScene" uid="uid://gxv0ntdm1jfn" path="res://light_sources/constant_light_source.tscn" id="3_glagj"]

[sub_resource type="LabelSettings" id="LabelSettings_pj626"]
font_size = 22
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.670588)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4tnuc")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="DiscoverButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0437049
anchor_top = 0.344326
anchor_right = 0.230337
anchor_bottom = 0.483215
offset_left = 46.6519
offset_top = 33.8766
offset_right = 54.6519
offset_bottom = 41.8766
text = "Discover Bulbs"
metadata/_edit_use_anchors_ = true

[node name="TurnOnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.357639
anchor_top = 0.398148
anchor_right = 0.544271
anchor_bottom = 0.537037
offset_right = 8.0
offset_bottom = 8.0
text = "Turn On"
metadata/_edit_use_anchors_ = true

[node name="TurnOffButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.583636
anchor_top = 0.344326
anchor_right = 0.770267
anchor_bottom = 0.483215
offset_left = 46.6519
offset_top = 33.8766
offset_right = 54.6519
offset_bottom = 41.8766
text = "Turn Off"
metadata/_edit_use_anchors_ = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 62.0
offset_right = 665.0
offset_bottom = 204.0

[node name="ColorUpdateCooldown" type="Timer" parent="."]
autostart = true

[node name="Bulbs" type="Node2D" parent="."]

[node name="WizBar1" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(704, 192)

[node name="WizBar2" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(896, 144)
IPAdress = "192.168.0.48"

[node name="WizÖkensand1" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(904, 432)
IPAdress = "192.168.0.40"

[node name="WizÖkensand2" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(736, 448)
IPAdress = "192.168.0.39"

[node name="WizÖkensand3" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(776, 496)
IPAdress = "192.168.0.37"

[node name="WizWindow1" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(240, 120)
IPAdress = "192.168.0.45"

[node name="WizWindow2" parent="Bulbs" instance=ExtResource("2_tu1jj")]
position = Vector2(240, 464)
IPAdress = "192.168.0.46"

[node name="QueuedColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 432.0
offset_right = 616.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="QueuedColorRect"]
visible = false
layout_mode = 0
offset_right = 200.0
offset_bottom = 40.0
text = "Queue"
label_settings = SubResource("LabelSettings_pj626")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SpeedSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 536.0
offset_right = 632.0
offset_bottom = 552.0
max_value = 1.0
step = 0.05
value = 0.2

[node name="LightSources" type="Node2D" parent="."]

[node name="ConstantLightSource" parent="LightSources" instance=ExtResource("3_glagj")]

[connection signal="pressed" from="TurnOnButton" to="." method="_on_turn_on_button_pressed"]
[connection signal="pressed" from="TurnOffButton" to="." method="_on_turn_off_button_pressed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="value_changed" from="SpeedSlider" to="." method="_on_speed_slider_value_changed"]
